# synapse

./: README.md
click-2.0.1/: konstantin.profile  my_configure.sh
click-2.0.1/elements/linuxmodule/: anydevice.cc  fromdevice.cc
click-2.0.1/elements/standard/: aroon_indicator.cc  aroon_indicator.hh  aroon_print.cc  aroon_print.hh  chix_glue.h  chix_trade_handler.cc  chix_trade_handler.hh  chix_trade_handler_utils.hh  directional_index.cc  directional_index.hh  directional_movement.cc  directional_movement.hh  dx.cc  dx.hh  dx_indicator.cc  (+55 more)
click-2.0.1/lib/: SynapseEWMA.cc  buffers.cc  circ_array.cc  cycles_counter.cc  fixedpt_cpp.cc  impulse_seq_number.cc  master.cc  nameinfo.cc  running_stat.cc
click-2.0.1/linuxmodule/: Makefile.in
click-2.0.1/userlevel/: Makefile.in
data/: trades.txt.bz2
hand_coded/: Makefile  ad_line.cpp  ad_line.h  array_wrapper.hh  circ_array.hpp  common.cpp  common.h  dmi.cpp  dmi.h  ewma.cpp  ewma.h  fixedpt_cpp.cc  fixedpt_cpp.h  hc_types.h  indicator_manager.cpp  indicator_manager.h  main.cpp  msg_parsing.h  msg_trade.h  run_indie.sh  running_stat.cc  running_stat.hh  test_fixedptcpp.cpp  tracer.h  trix.cpp  trix.h  vortex.cpp  vortex.h
indicator_configs/: dmi_naive.click  dmi_opt.click  dmi_tee.click  trix_naive.click  trix_opt.click  vortex_naive.click  vortex_opt.click  vortex_tee.click
kernel_modules/kernel_hack/: dev.c
kernel_modules/packet_capture/: Makefile  insert_capturer.sh  packet_capture.c  remove_capturer.sh
kernel_modules/shmq/: Makefile  shmq.c  shmq.h  shmq_msg.h
kernel_modules/timestamper/: Makefile  timestamper.c
tools/fix_trade_msgs/: Makefile  extractConvertFixTrades.cpp  hffix.hpp
tools/shmq_client/: CMakeLists.txt
tools/shmq_client/src/: CMakeLists.txt  cycles_counter.cc  cycles_counter.hh  shmq_client_pcap.c  shmq_client_perf.cpp
tools/tcp_probe/: CMakeLists.txt  README.txt
tools/tcp_probe/src/: CMakeLists.txt  ConfigManager.h  ConfigParam.h  Connection.h  MsgSenderApp.cc  PbFileReader.h  ProbeTool.h  TcpConnection.h  TcpReceiverApp.cc  UdpConnection.h  UdpReceiveConnection.h  UdpReceiverApp.cc  UdpStats.cc  runMsgSender.sh  runTcpReceiver.sh  runUdpStats.sh
tools/tcp_probe/tests/: CMakeLists.txt  CircularBufferTests.cpp  ConfigManagerTests.cpp
(+17 files in other folders)
